--- a/src/views/Popup/App.css
+++ b/src/views/Popup/App.css
@@ -1,5 +1,5 @@
 :root {
-    --goodreads-colour: #f4f1ea;
+    --goodreads-colour: #f1f1e4;
     --main-dark: #d8d8d8;
 }
 
